fix spacing

--- a/index.css
+++ b/index.css
@@ -4,4 +4,6 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 60pt;
     background-color: black;
+    width: 80%;
+    margin: auto;
 }
